--- a/blogapp/templates/about.html
+++ b/blogapp/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-     <h1>About</h1>
+     <h1>O mnie</h1>
+     <p>Mam na imię Cezary Leśny i jestem studentem Wydziału Elektrycznego.</p>
 {% endblock content %}
