--- a/blogapp/templates/layout.html
+++ b/blogapp/templates/layout.html
@@ -32,6 +32,7 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{ url_for('new_post') }}">Dodaj nowy post</a>
                   <a class="nav-item nav-link" href="{{ url_for('account') }}">Konto</a>
                   <a class="nav-item nav-link" href="{{ url_for('logout') }}">Wyloguj</a>
                 {% else %}
@@ -60,7 +61,6 @@
     </div>
     <div class="col-md-4">
       <div class="content-section">
-        <h3>Sidebar</h3>
         <p class='text-muted'>Informacje:
           <ul class="list-group">
             <li class="list-group-item list-group-item-light">Najnowsze posty</li>
