--- a/blogapp/templates/post.html
+++ b/blogapp/templates/post.html
@@ -27,9 +27,9 @@
         </button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Wyjdź</button>
         <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
-          <input class="btn btn-danger" type="submit" value="Delete">
+          <input class="btn btn-danger" type="submit" value="Usuń">
         </form>
       </div>
     </div>
